<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".RegisterPage">
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:text="@string/Business_account"
        android:textAlignment="center"
        android:textColor="#EE6D84FA"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="70dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#616161"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="Autofill,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="70dp"
        android:hint="@string/company_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#A9D1B2B2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        tools:ignore="Autofill,TextContrastCheck,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="70dp"
        android:hint="@string/company_type"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#A9D1B2B2"
        app:layout_constraintTop_toBottomOf="@+id/editText3"
        tools:ignore="Autofill,TextContrastCheck,VisualLintTextFieldSize"
        tools:layout_editor_absoluteX="25dp" />

    <EditText

        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/website"
        android:inputType="text"
        android:minHeight="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="70dp"
        android:textColorHint="#A9D1B2B2"
        app:layout_constraintTop_toBottomOf="@+id/editTextText"
        tools:ignore="Autofill,TextContrastCheck,VisualLintTextFieldSize"
        tools:layout_editor_absoluteX="25dp" />

    <EditText

        android:id="@+id/editText5"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#A9D1B2B2"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="70dp"
        app:layout_constraintTop_toBottomOf="@+id/editText4"
        tools:ignore="Autofill,TextContrastCheck,VisualLintTextFieldSize"
        tools:layout_editor_absoluteX="25dp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText5" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="47dp"
        android:text="@string/agree_terms"
        android:textColor="#111112"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/checkBox"
        app:layout_constraintTop_toBottomOf="@+id/editText5" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:background="@drawable/create_button_bg"
        android:text="@string/create_button"
        android:textColor="#4FC3F7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>