<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linerlyout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register2_bg"
    tools:context=".Register_activity_2">

    <EditText
        android:id="@+id/editText3"
        android:layout_width="312dp"
        android:elevation="10dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:paddingVertical="4dp"
        android:paddingHorizontal="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/baseline_person_outline_24"
        android:drawablePadding="8dp"
        android:hint="@string/full_name"
        android:inputType="text"
        android:textSize="19sp"
        android:textColorHint="#959494"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="Autofill,TextContrastCheck,VisualLintTextFieldSize,TouchTargetSizeCheck" />


    <EditText
        android:id="@+id/editText4"
        android:textColorHint="#959494"

        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:elevation="10dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="8dp"
        android:hint="@string/email_2"
        android:inputType="textEmailAddress"
        android:paddingVertical="4dp"
        android:paddingHorizontal="10dp"

        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3"
        tools:ignore="Autofill,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:textColorHint="#959494"

        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:elevation="10dp"

        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/baseline_phone_enabled_24"
        android:drawablePadding="8dp"
        android:hint="@string/phn_num"
        android:importantForAutofill="no"
        android:inputType="number"
        android:paddingVertical="4dp"
        android:paddingHorizontal="10dp"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText4"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:elevation="10dp"
        android:textColorHint="#959494"

        android:layout_marginEnd="50dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/baseline_password_24"
        android:drawablePadding="8dp"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingVertical="4dp"
        android:paddingHorizontal="10dp"

        android:textSize="19sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText8"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton2"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:background="@drawable/button_bg2"
        android:text="Register"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText7" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="45dp"
        android:text="Already a member ?"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatButton2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:textColor="#F06E00"
        android:layout_marginTop="50dp"
        android:text="Login"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/appCompatButton2" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_2"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/register2"
            android:layout_marginTop="110dp"
            android:layout_marginStart="160dp"/>


        <TextView
            android:id="@+id/editText6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="280dp"
            android:textAlignment="center"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="50dp"
            android:text="@string/register"
            android:textSize="21sp"
            android:textStyle="bold"
            android:textColor="#DFFFFFFF"
            tools:ignore="Autofill,TextContrastCheck,VisualLintTextFieldSize" />



    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout >